fix: revert back to j8 to support older versions of mc down to 1.8 fix: add AncientNodeData to support node data on <1.12 better